--- a/views/dives/index.ejs
+++ b/views/dives/index.ejs
@@ -2,7 +2,7 @@
 
 <div id="index-body">
 
-    <img id="index-img"src="https://i.imgur.com/azLDf2u.png">
+    <img id="index-img"src="https://i.imgur.com/77SOMnK.png">
 
     <h1 id="index-h1">dive log</h1>
 
@@ -34,3 +34,7 @@
     </table>
 
 </div>
+
+<footer>
+    <%- include('../partials/footer'); %>
+</footer>
