--- a/views/dives/show.ejs
+++ b/views/dives/show.ejs
@@ -1,63 +1,57 @@
 <%- include('../partials/header') %>
 
-<h1>Dive Number <%= dive.number %></h1>
+<div id = "show-body">
 
-<h2>Details</h2>
+    <img id="show-img"src="https://i.imgur.com/8ZYAXB6.png">
 
-<!-- dive log details -->
-<div>Dive Site</div>
-<div><%= dive.site%></div>
+    <h1>Dive Number <%= dive.number %></h1>
 
-<div>Dive Buddy</div>
-<div><%= dive.buddy%></div>
+    <h2>Details</h2>
+    <br>
 
-<div>Date</div>
-<div><%= dive.date%></div>
+    <!-- dive log details -->
 
-<div>Time</div>
-<div><%= dive.time%></div>
+    <div><strong>Dive Site:</strong> <%= dive.site%></div>
+    <br><br>
+    <div><strong>Date:</strong> <%= dive.date%></div>
+    <br>
+    <div><strong>Time:</strong> <%= dive.time%></div>
+    <br>
+    <div><strong>Dive Buddy:</strong> <%= dive.buddy%></div>
+    <br>
+    <div><strong>Exposure Protection:</strong> <%= dive.protection%></div>
+    <br>
+    <div><strong>Weight:</strong> <%= dive.weight%> <%= dive.weightUnits%></div>
+    <br>
+    <div><strong>Entry:</strong> <%= dive.entry%></div>
+    <br>
+    <div><strong>Conditions:</strong> <%= dive.conditions%></div>
+    <br>
+    <div class="flex-container">
+        <div class="flex-content"><strong>Air Temp:</strong> <%= dive.airTemp%> <%= dive.tempUnits%></div>
+        <br>
+        <div class="flex-content"><strong>Surface Temp:</strong> <%= dive.surfaceTemp%> <%= dive.tempUnits%></div>
+        <br>
+        <div class="flex-content"><strong>Water Temp:</strong> <%= dive.waterTemp%> <%= dive.tempUnits%></div>
+    </div>
+    <br>
+    <div class="flex-container">
+        <div class="flex-content"><strong>Starting Air Pressure:</strong> <%= dive.startAir%> <%= dive.airUnits%></div>
+        <br>
+        <div class="flex-content"><strong>Ending Air Pressure:</strong> <%= dive.endAir%> <%= dive.airUnits%></div>
+    </div>
+    <br>
+    <div><strong>Maximum Depth:</strong> <%= dive.maxDepth%> <%= dive.depthUnits%></div>
+    <br>
+    <div><strong>Bottom Time:</strong> <%= dive.bottomTime%></div>
+    <br>
+    <div><strong>Notes:</strong></div>
+    <div><%= dive.notes%></div>
+    <br>
+    <a href="/dives/<%= dive._id%>/edit"><button id="edit-log-dive-button">Edit Log</button></a>
 
-<div>Exposure Protection</div>
-<div><%= dive.protection%></div>
+</div>
 
-<div>Weight</div>
-<div><%= dive.weight%></div>
-<div><%= dive.weightUnits%></div>
-
-<div>Entry</div>
-<div><%= dive.entry%></div>
-
-<div>Conditions</div>
-<div><%= dive.conditions%></div>
-
-<div>Air Temp</div>
-<div><%= dive.airTemp%></div>
-<div><%= dive.tempUnits%></div>
-
-<div>Surface Temp</div>
-<div><%= dive.surfaceTemp%></div>
-<div><%= dive.tempUnits%></div>
-
-<div>Water Temp</div>
-<div><%= dive.waterTemp%></div>
-<div><%= dive.tempUnits%></div>
-
-<div>Starting Air Pressure</div>
-<div><%= dive.startAir%></div>
-<div><%= dive.airUnits%></div>
-
-<div>Ending Air Pressure</div>
-<div><%= dive.endAir%></div>
-<div><%= dive.airUnits%></div>
-
-<div>Maximum Depth</div>
-<div><%= dive.maxDepth%></div>
-<div><%= dive.depthUnits%></div>
-
-<div>Bottom Time</div>
-<div><%= dive.bottomTime%></div>
-
-<div>Notes</div>
-<div><%= dive.notes%></div>
-
-<a href="/dives/<%= dive._id%>/edit"><button>Edit Log</button></a>
+<footer>
+    <%- include('../partials/footer'); %>
+</footer>
