--- a/views/dives/index.ejs
+++ b/views/dives/index.ejs
@@ -1,13 +1,13 @@
 <%- include('../partials/header') %>
 
-<div id="index-body">
+<div class="content-body">
 
-    <img id="index-img"src="https://i.imgur.com/77SOMnK.png">
+    <img class="head-img"src="https://i.imgur.com/77SOMnK.png">
 
-    <h1 id="index-h1">dive log</h1>
+    <h1 id="index-h1">D I V E &nbsp L O G</h1>
 
     <form id="add-new-dive"action="/dives/new">
-        <input id="add-new-dive-button" type="submit" value="add new dive">
+        <input class="style-button" type="submit" value="add new dive">
     </form>
 
     <h2>my dives</h2>
