--- a/views/dives/new.ejs
+++ b/views/dives/new.ejs
@@ -1,87 +1,101 @@
 <%- include('../partials/header') %>
 
-<h1>New Dive</h1>
+    <img class="head-img"src="https://i.imgur.com/lzLCD2s.png">
 
-<form id="new-dive-form" action="/dives" method="POST">
-    <label>Dive Number
-        <input type="Number" name="number">
-    </label><br>
-    <label>Dive Site
-        <input type="String" name="site">            
-    </label><br>
-    <label>Dive Buddy
-        <input type="String" name="buddy">            
-    </label><br>    
-    <label>Date
-        <input type="Date" name="date" value="date">
-    </label><br>
-    <label>Time
-        <input type="String" name="time">
-    </label><br>
-    <label>Exposure Protection
-        <input type="String" name="protection">
-    </label><br>
-    <label>Weight
-        <input type="Number" name="weight">
-    </label><br>  
-    <label>
-        <select name="weightUnits">
-            <option value="kg">kg</option>
-            <option value="ib" selected>ib</option>
-        </select>
-    </label><br>
-    <label>Entry
-        <select name="entry">
-            <option value="shore">shore</option>
-            <option value="boat" selected>boat</option>
-            <option value="other" selected>other</option>
-        </select>
-    </label><br>
-    <label>Conditions
-        <input type="String" name="conditions">
-    </label><br>  
-    <label>Air Temp
-        <input type="Number" name="airTemp">
-    </label><br> 
-    <label>Surface Temp
-        <input type="Number" name="surfaceTemp">
-    </label><br> 
-    <label>Water Temp
-        <input type="Number" name="waterTemp">
-    </label><br>   
-    <label>
-        <select name="tempUnits">
-            <option value="C">C</option>
-            <option value="F" selected>F</option>
-        </select>
-    </label><br>
-    <label>Starting Air Pressure
-        <input type="Number" name="startAir">
-    </label><br>
-    <label>Ending Air Pressure
-        <input type="Number" name="endAir">
-    </label><br> 
-    <label>
-        <select name="airUnits">
-            <option value="psi" selected>psi</option>
-            <option value="bar">bar</option>
-        </select>
-    </label><br>  
-    <label>Max Depth
-        <input type="Number" name="maxDepth">
-    </label><br>      
-    <label>
-        <select name="depthUnits">
-            <option value="ft" selected>ft</option>
-            <option value="m">m</option>
-        </select>
-    </label><br>  
-    <label>Bottom Time
-        <input type="String" name="bottomTime">
-    </label><br>    
-    <label>Notes
-        <input type="String" name="notes">
-    </label><br>
+    <h1>New Dive</h1>
 
-    <input id="new-dive-button" type="submit" value="Add Dive">
-</form>
+<div class = "content-body">
+
+    <form id="new-dive-form" action="/dives" method="POST">
+        <label>Dive Number
+            <input type="Number" name="number">
+        </label><br>
+        <label>Dive Site
+            <input type="String" name="site">            
+        </label><br>
+        <label>Dive Buddy
+            <input type="String" name="buddy">            
+        </label><br>    
+        <label>Date
+            <input type="Date" name="date" value="date">
+        </label><br>
+        <label>Time
+            <input type="String" name="time">
+        </label><br>
+        <label>Exposure Protection
+            <input type="String" name="protection">
+    <hr>
+        </label><br>
+        <label>Weight
+            <input class="sm" type="Number" name="weight">
+        </label>
+        <label>
+            <select name="weightUnits">
+                <option value="kg">kg</option>
+                <option value="ib" selected>ib</option>
+            </select>
+        </label><br>
+        <label>Entry
+            <select name="entry">
+                <option value="shore">shore</option>
+                <option value="boat" selected>boat</option>
+                <option value="other" selected>other</option>
+            </select>
+        </label><br>
+        <label>Conditions
+            <input type="String" name="conditions">
+        </label><br>  
+        <label>Air Temp
+            <input class="sm" type="Number" name="airTemp">
+        </label>
+        <label>Surface Temp
+            <input class="sm" type="Number" name="surfaceTemp">
+        </label>
+        <label>Water Temp
+            <input class="sm" type="Number" name="waterTemp">
+        </label> 
+        <label>
+            <select name="tempUnits">
+                <option value="C">C</option>
+                <option value="F" selected>F</option>
+            </select>
+    <hr>    
+        </label><br>
+        <label>Starting Air Pressure
+            <input class="sm" type="Number" name="startAir">
+        </label>
+        <label>Ending Air Pressure
+            <input class="sm" type="Number" name="endAir">
+        </label>
+        <label>
+            <select name="airUnits">
+                <option value="psi" selected>psi</option>
+                <option value="bar">bar</option>
+            </select>
+        </label><br>  
+        <label>Max Depth
+            <input class="sm" type="Number" name="maxDepth">
+        </label> 
+        <label>
+            <select name="depthUnits">
+                <option value="ft" selected>ft</option>
+                <option value="m">m</option>
+            </select>
+        </label><br>  
+        <label>Bottom Time
+            <input type="String" name="bottomTime">
+    <hr>    
+        </label><br>    
+        <label>Notes<br>
+            <input id="notes-input" type="String" name="notes">
+        </label><br>
+        <br>
+        <input class="style-button" type="submit" value="Add Dive">
+        <div class="bottom-space">&nbsp</div>
+    </form>
+
+</div>
+
+    <footer>
+        <%- include('../partials/footer'); %>
+    </footer>
