remove table from dive/index and replace with more elegant styling

--- a/views/dives/new.ejs
+++ b/views/dives/new.ejs
@@ -2,7 +2,7 @@
 
     <img class="head-img"src="https://i.imgur.com/lzLCD2s.png">
 
-    <h1>New Dive</h1>
+    <h1>new dive</h1>
 
 <div class = "content-body">
 
@@ -21,10 +21,10 @@
         </label><br>
         <label>Time
             <input type="String" name="time">
+    <hr>
         </label><br>
         <label>Exposure Protection
             <input type="String" name="protection">
-    <hr>
         </label><br>
         <label>Weight
             <input class="sm" type="Number" name="weight">
