--- a/views/dives/index.ejs
+++ b/views/dives/index.ejs
@@ -12,26 +12,20 @@
 
     <h2>my dives</h2>
 
-    <table>
-        <thead>
-            <th>Dive Number</th>
-            <th>Date</th>
-            <th>Dive Site</th>
-            <th>Details</th>
-        </thead>
-        <tbody>
-            <% dives.forEach(function(d) { %>
-                <% if (user && user._id.equals(d.user)) { %>
-                    <tr>
-                        <td><%= d.number%></td>
-                        <td><%= d.date%></td>
-                        <td><%= d.site%></td>
-                        <td><a class ="dive-details" href="/dives/<%= d._id %>">view</a></td>
-                    </tr>
-                <% }
-                }); %>
-        </tbody>
-    </table>
+    <% dives.forEach(function(d) { %>
+        <% if (user && user._id.equals(d.user)) { %>
+            <hr>
+            <br>
+            <div class = "flex-container">
+                <div class = "flex-content"><strong>no. <%= d.number%></strong></div>
+                <div class = "flex-content"><%= d.date%></div>
+                <div class = "flex-content"><%= d.site%></div>
+                <div class = "flex-content"><a class ="dive-details" href="/dives/<%= d._id %>">view</a></div>
+            <div>
+        <% }
+        }); %>
+
+
 
 </div>
 
