--- a/views/dives/index.ejs
+++ b/views/dives/index.ejs
@@ -1,13 +1,13 @@
 <%- include('../partials/header') %>
 
+<img class="head-img"src="https://i.imgur.com/77SOMnK.png">
+
+<h1 id="index-h1">D I V E &nbsp L O G</h1>
+
 <div class="content-body">
 
-    <img class="head-img"src="https://i.imgur.com/77SOMnK.png">
-
-    <h1 id="index-h1">D I V E &nbsp L O G</h1>
-
     <form id="add-new-dive"action="/dives/new">
-        <input class="style-button" type="submit" value="add new dive">
+        <input class="style-button" type="submit" value="add dive">
     </form>
 
     <h2>my dives</h2>
@@ -24,8 +24,6 @@
             <div>
         <% }
         }); %>
-
-
 
 </div>
 
