--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -1,10 +1,10 @@
 <%- include('../partials/header') %>
 
-<img class="head-img"src="https://i.imgur.com/azLDf2u.png">
+<img class="head-img"src="https://i.imgur.com/SDlwshd.png">
 
 <h1>my profile</h1>
 
-<div class="content-body" id="profile-index">
+<div class="content-body">
     
     <% if (profile) { %>
 
