--- a/views/profiles/new.ejs
+++ b/views/profiles/new.ejs
@@ -1,18 +1,27 @@
 <%- include('../partials/header') %>
 
+<img class="head-img"src="https://i.imgur.com/azLDf2u.png">
+
 <h1><%= user.name%></h1>
 
-<form id="new-dive-form" action="/profile" method="POST">
-    <label>Username
-        <input type="String" name="nickname">
-    </label><br>
-    <label>When did you start diving?
-        <input type="String" name="startDate">            
-    </label><br>
-    <label>Favorite dive location?
-        <input type="String" name="favorite">            
-    </label><br>
+<div class="content-body">
 
-    <input id="new-profile-button" type="submit" value="Add Info">
-</form>
+    <form action="/profile" method="POST">
+        <label>Username
+            <input type="String" name="nickname">
+        </label><br>
+        <label>When did you start diving?
+            <input type="String" name="startDate">            
+        </label><br>
+        <label>Favorite dive location?
+            <input type="String" name="favorite">            
+        </label><br>
 
+        <input class="style-button" type="submit" value="add info">
+    </form>
+
+</div>
+
+<footer>
+    <%- include('../partials/footer'); %>
+</footer>
