--- a/views/dives/index.ejs
+++ b/views/dives/index.ejs
@@ -16,15 +16,16 @@
     <% dives.forEach(function(d) { %>
         <% if (user && user._id.equals(d.user)) { %>
             <div class = "flex-container">
-            <hr>
-            <br>
                 <div class = "flex-content"><strong>no. <%= d.number%></strong></div>
-                <div class = "flex-content"><%= d.date%></div>
+                <div class = "flex-content"><%= d.date.getDate()%>.<%= d.date.getMonth()%>.<%= d.date.getFullYear()%></div>
                 <div class = "flex-content"><%= d.site%></div>
                 <div class = "flex-content"><a class ="dive-details" href="/dives/<%= d._id %>">view</a></div>
             </div>
+            <hr>
+            <br>
         <% }
         }); %>
+
 
 </div>
 
