--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -39,6 +39,43 @@ a:hover {
 a {
   color: black;
 }
+/* index page pre-login */
+#login-body {
+  background-image: url("https://i.imgur.com/SDlwshd.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  text-align: center;
+}
+#login-title {
+  color: white;
+  font: 80px "Lucida Grande", Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 30px;
+  margin-top: 40px;
+}
+#login-button {
+  width: 100px;
+  height: 50px;
+  background-color: #F59432;
+  font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
+  letter-spacing: 2px;
+  padding: 8px;
+  border-radius: 5px;
+  border: none;
+  margin-top: 80px;
+}
+#login-button:hover {
+  border-radius: 20px;
+  font-weight: bold;
+}
+#login-p {
+  color: white;
+  font-size: 15px;
+  letter-spacing: 3px;
+  margin-top: 30px;
+}
+/* . */
 h1 {
   color: white;
   letter-spacing: 10px;
