--- a/views/dives/edit.ejs
+++ b/views/dives/edit.ejs
@@ -88,9 +88,9 @@
             <input type="String" name="bottomTime" value="<%= dive.bottomTime%>">
     <hr>    
         </label><br>    
-        <label>Notes
-            <input type="String" name="notes" value="<%= dive.notes%>">
-        </label><br>
+        <div>Notes</div>
+            <textarea type="String" name="notes" rows="5" cols="50" value="<%= dive.notes%>"></textarea>
+            <br>
     <br>    
         <input class="style-button" type="submit" value="update">
     </form>
