--- a/views/dives/new.ejs
+++ b/views/dives/new.ejs
@@ -87,7 +87,7 @@
     <hr>    
         </label><br>    
         <label>notes<br>
-            <input id="notes-input" type="String" name="notes" maxlength="20000">
+            <textarea id="notes-input" type="String" name="notes" rows="5" cols="50"></textarea>
         </label><br>
         <br>
         <input class="style-button" type="submit" value="add dive">
