--- a/views/dives/show.ejs
+++ b/views/dives/show.ejs
@@ -53,6 +53,9 @@
     <div><%= dive.notes%></div>
     <br>
     <a href="/dives/<%= dive._id%>/edit"><button class="style-button">edit dive</button></a>
+    <br>
+    <br>
+    <a href="/dives"><button class="style-button">all dives</button></a>
 
 </div>
 
