--- a/views/profiles/edit.ejs
+++ b/views/profiles/edit.ejs
@@ -13,7 +13,7 @@
     <label>When did you start diving?
         <input type="String" name="startDate" value="<%= profile.startDate%>">            
     </label><br>
-    <label>Favorite dive location?
+    <label>Favorite dive site?
         <input type="String" name="favorite" value="<%= profile.favorite%>">            
     </label><br><br>
 
