--- a/views/dives/new.ejs
+++ b/views/dives/new.ejs
@@ -7,14 +7,14 @@
 <div class = "content-body">
 
     <form id="new-dive-form" action="/dives" method="POST">
-        <label>dive no.
+        <label>dive no.*
             <input class = "sm" type="Number" name="number">
         </label>
-        <label>site
+        <label>site*
             <input type="String" name="site">            
         </label><br>   
-        <label>date
-            <input type="Date" name="date" value="date">
+        <label>date*
+            <input class = "date-input" type="String" name="date" placeholder="MM/DD/YYYY">
         </label>
         <label>time
             <input type="String" name="time">
