--- a/views/dives/show.ejs
+++ b/views/dives/show.ejs
@@ -50,7 +50,10 @@
 <hr>    
     <br>
     <div><strong>Notes:</strong></div>
-    <div><%= dive.notes%></div>
+    <br>
+    <div id="note-container"><%= dive.notes%></div>
+    <br>
+<hr> 
     <br>
     <a href="/dives/<%= dive._id%>/edit"><button class="style-button">edit dive</button></a>
     <br>
