--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -32,7 +32,7 @@
             <% profile.certs.forEach(function(c) { %>
                 <br>
                 <div class = "flex-container" id="flex-profile"></div>
-                <%if (c.exiration) { %>
+                <%if (c.expiration.length) { %>
                     <div><%= c.cert %> - Expires: <%= c.expiration %></div>
                     <br>
                 <% } else { %>
